# whisper_mic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mic.py  pyproject.toml  requirements.txt
faster_whisper_real_time_server/: .isort.cfg  .pylintrc  client.py  customized_whisper_mic.py  faster_whisper_transcription_pb2.py  faster_whisper_transcription_pb2_grpc.py  grpc_server.py
faster_whisper_real_time_server/proto/: faster_whisper_transcription.proto
whisper_mic/: __init__.py  __main__.py  cli.py  customized_whisper_mic.py  grpc_client.py  grpc_server.py  mic.py  utils.py  whisper_mic.py  whisper_mic_service_pb2.py  whisper_mic_service_pb2_grpc.py
whisper_mic/proto/: whisper_mic_service.proto
