[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_mic"
version = "1.4.3"
authors = [
  { name="Blake Mallory", email="blakecmallory@gmail.com" },
]
description = "Whisper for your microphone"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'importlib-metadata; python_version>"3.9"',
    "attrs",
    "click",
    "ffmpeg-python",
    "more-itertools",
    "numpy",
    "openai-whisper",
    "pyaudio",
    "pydantic",
    "pydub",
    "pynput",
    "requests",
    "rich",
    "speechrecognition",
    "tdqm",
    "torch",
    "transformers",
]

[project.scripts]
whisper_mic = "whisper_mic.cli:main"
